# ThING-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: globals.cpp  globals.h
app/UI/: ui.cpp
app/update/: physicsObject.h  update.cpp
core/: api.cpp  commandBuffer.cpp  core.cpp  debugging.cpp  detail.cpp  imGui.cpp  init.cpp  mainLoop.cpp
core/graphics/: bufferManager.cpp  commandBufferManager.cpp  pipelineManager.cpp  swapChainManager.cpp
core/graphics/pipelines/: JFAPipeline.cpp  basicPipeline.cpp  circlePipeline.cpp  outlinePipeline.cpp  postPipeline.cpp
core/window/: windowManager.cpp
demo/: CMakeLists.txt  globals.cpp  main.cpp
demo/UI/: ui.cpp
demo/update/: update.cpp
extras/: compile  fpsCounter.cpp
include/ThING/: api.h  consts.h  core.h  types.h
include/ThING/core/: detail.h
include/ThING/extras/: fpsCounter.h
include/ThING/graphics/: bufferManager.h  commandBufferManager.h  pipelineManager.h  swapChainManager.h
include/ThING/types/: apiTypes.h  buffer.h  circle.h  collission.h  contexts.h  descriptor.h  dynamicBuffer.h  enums.h  polygon.h  renderData.h  renderImage.h  uniformBufferObject.h  vertex.h
include/ThING/window/: windowManager.h
shaders/: basic.frag  basic.vert  basicFrag.spv  basicVert.spv  circle.frag  circle.vert  circleFrag.spv  circleVert.spv  compile.bat  compile.sh  embed.cpp  jfa.comp  jfaComp.spv  outline.frag  outline.vert  outlineFrag.spv  outlineVert.spv  post.frag  post.vert  postFrag.spv
